--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -23,3 +23,12 @@
 }
 
 /* ************************************************************************* */
+
+/* CSS для Filter***************************************************** */
+.filter-input {
+    max-width: 335px;
+}
+
+.filters {
+    display: block;
+}
