--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -1,4 +1,5 @@
-@import "./header.css";
-@import "./general.css";
-@import "./main.css";
-@import "./popup-common.css";
+@import './header.css';
+@import './general.css';
+@import './main.css';
+@import './popup-common.css';
+@import './hero.css';
