some css + fix-filter

--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -17,7 +17,24 @@ main {
   flex-direction: column;
 }
 
-/* CSS для Category***************************************************** */
+/* Мобілка**************************************************************** */
+.all-category-btn {
+    width: 176px;
+    height: 50px;
+    padding: 14px 29px;
+    border-radius: 15px;
+    border: 1px, #050505;
+    background-color: transparent;
+    margin-bottom: 24px;
+    font-size: 18px;
+    font-weight: 500;
+    line-height: 1.21;
+}
+
+.item-cards {
+    margin-bottom: 18px;
+}
+
 .card-img {
   max-width: 335px;
 }
@@ -37,11 +54,39 @@ main {
   overflow-y: scroll;
 }
 
-/* CSS для Filter***************************************************** */
 .filter-input {
   max-width: 335px;
 }
 
 .filters {
-  display: block;
+    display: block;
+}
+
+/* MIN 768******************************************************* */
+@media screen and (min-width: 768px) {
+    .cards {
+        display: flex;
+        flex-wrap: wrap;
+        row-gap: 16px;
+        column-gap: 16px;
+    }
+
+    .item-cards {
+        margin-bottom: 0px;
+    }
+
+    .card-img {
+        max-width: 240px;
+    }
+}
+
+/* MIN 1280******************************************************/
+@media screen and (min-width: 1280px) {
+    .card-img {
+        max-width: 250px;
+    }
+
+    .cards {
+        row-gap: 32px;
+    }
 }
