--- a/src/styles/hero.css
+++ b/src/styles/hero.css
@@ -45,11 +45,6 @@ ol[class] {
   list-style: none;
 }
 
-/* Элементы a, у которых нет класса, сбрасываем до дефолтных стилей */
-a:not([class]) {
-  text-decoration-skip-ink: auto;
-}
-
 /* Упрощаем работу с изображениями */
 img {
   max-width: 100%;
@@ -57,10 +52,6 @@ img {
 }
 a {
   text-decoration: none;
-}
-/* Указываем понятную периодичность в потоке данных у article*/
-article > * + * {
-  margin-top: 1em;
 }
 
 /* Наследуем шрифты для инпутов и кнопок */
@@ -80,8 +71,12 @@ select {
     scroll-behavior: auto !important;
   }
 }
-body {
-  background: #f8f8f8;
+.hero-container {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+  margin: auto;
+  max-width: 335px;
 }
 .hero-title {
   color: #050505;
@@ -126,4 +121,244 @@ body {
   align-items: center;
   gap: 10px;
   margin-bottom: 48px;
+}
+.hero-text {
+  width: 335px;
+  margin-bottom: 28px;
+}
+.swiper-container {
+  display: flex;
+  gap: 8px;
+  justify-content: flex-end;
+}
+.images {
+  width: 100%;
+  display: flex;
+}
+.image {
+  height: 280px;
+  background-color: #050505;
+}
+.image:not(:last-child) {
+  border-radius: 10px;
+}
+.cook > img {
+  object-fit: cover;
+  width: 80px;
+  height: 280px;
+  border-radius: 10px;
+}
+.dish {
+  position: relative;
+  width: 200px;
+}
+.dish > img {
+  width: 150px;
+  height: 150px;
+  margin-bottom: 70px;
+  translate: 15% 35%;
+  background: radial-gradient(var(--accent-color) -125%, #050505 75%);
+}
+.dish-zoom {
+  overflow: clip;
+  border-radius: 10px 0 0 10px;
+}
+.dish-zoom > img {
+  object-position: -125px -80px;
+  object-fit: cover;
+  width: 60px;
+  height: 442px;
+}
+.dish-descr {
+  display: flex;
+  flex-direction: column;
+  text-align: center;
+}
+.dish-name {
+  max-width: 144px;
+  margin: auto;
+  color: rgba(248, 248, 248, 0.6);
+  text-align: center;
+  font-size: 10px;
+  font-style: normal;
+  font-weight: 500;
+  line-height: 14px;
+  text-transform: uppercase;
+}
+.dish-area {
+  display: flex;
+  margin-top: 4px;
+  margin-left: auto;
+  margin-right: auto;
+  width: 24px;
+  color: rgba(248, 248, 248, 0.2);
+  text-align: center;
+  font-size: 8px;
+  font-style: normal;
+  font-weight: 400;
+  line-height: 12px;
+}
+.swiper {
+  width: 335px;
+  height: 320px;
+}
+.swiper-pagination-bullet {
+  background-color: gray;
+  text-align: center;
+  font-family: Poppins;
+  font-size: 25px;
+  font-style: normal;
+  font-weight: 600;
+  line-height: 18px;
+  letter-spacing: 2px;
+}
+
+.swiper-pagination-bullet-active {
+  background-color: var(--accent-color);
+  font-family: Poppins;
+  font-size: 25px;
+  font-style: normal;
+  font-weight: 600;
+  line-height: 18px;
+  letter-spacing: 2px;
+}
+.swiper-horizontal > .swiper-pagination-bullets,
+.swiper-pagination-bullets.swiper-pagination-horizontal,
+.swiper-pagination-custom,
+.swiper-pagination-fraction {
+  width: 360px;
+}
+/* ======================== min-768px ====================== */
+@media screen and (min-width: 768px) {
+  .hero-container {
+    max-width: 736px;
+    padding-bottom: 80px;
+    flex-direction: column;
+  }
+  .hero-text {
+    margin-bottom: 32px;
+  }
+  .hero-title {
+    margin: 0;
+    width: 446px;
+    margin-bottom: 16px;
+    font-size: 36px;
+  }
+  .hero-descr {
+    width: 408px;
+    font-size: 16px;
+    line-height: 24px;
+  }
+  .hero-btn {
+    margin-bottom: 64px;
+    padding: 14px 28px;
+  }
+  .swiper {
+    width: 736px;
+    height: 490px;
+  }
+  .swiper-container {
+    gap: 16px;
+  }
+  .cook > img {
+    width: 137px;
+    height: 442px;
+  }
+  .dish {
+    width: 351px;
+    height: 442px;
+  }
+  .dish > img {
+    width: 262px;
+    height: 262px;
+    margin-bottom: 102px;
+    translate: 15% 25%;
+  }
+  .dish-zoom {
+    overflow: clip;
+    border-radius: 10px 0 0 10px;
+    height: 442px;
+  }
+  .dish-zoom > img {
+    object-position: -80px -10px;
+    object-fit: cover;
+    width: 216px;
+    transform: scale(1.3);
+  }
+  .dish-name {
+    max-width: 276px;
+    font-size: 14px;
+    line-height: 18px;
+  }
+  .dish-area {
+    margin-top: 8px;
+    font-size: 12px;
+    line-height: 14px;
+  }
+  .swiper-horizontal > .swiper-pagination-bullets,
+  .swiper-pagination-bullets.swiper-pagination-horizontal,
+  .swiper-pagination-custom,
+  .swiper-pagination-fraction {
+    width: 660px;
+  }
+}
+/* ======================== min-1200px ====================== */
+@media screen and (min-width: 1200px) {
+  .hero-container {
+    max-width: 1280px;
+    padding-bottom: 100px;
+    justify-content: flex-start;
+    flex-direction: row;
+    flex-wrap: nowrap;
+    gap: 32px;
+  }
+  .hero-block {
+    margin-top: 66px;
+    display: flex;
+    flex-direction: column;
+  }
+  .hero-text {
+    width: 446px;
+  }
+  .swiper-container {
+    display: flex;
+    height: 442px;
+    gap: 16px;
+  }
+  .cook > img {
+    object-fit: cover;
+    width: 137px;
+    height: 442px;
+    border-radius: 10px;
+  }
+  .dish {
+    position: relative;
+    width: 351px;
+    height: 442px;
+  }
+  .dish > img {
+    width: 262px;
+    height: 262px;
+    margin-bottom: 95px;
+    translate: 45px 50px;
+  }
+  .dish-zoom {
+    overflow: clip;
+  }
+  .dish-zoom > img {
+    object-position: -100px -10px;
+    object-fit: cover;
+    width: 175px;
+    height: 442px;
+    transform: scale(1.3);
+  }
+  .dish-descr {
+    display: flex;
+    flex-direction: column;
+    text-align: center;
+  }
+  .swiper {
+    width: 702px;
+    height: 480px;
+  }
 }
