Adding modals functionality
Simple code, css and html for all 3 popups

--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -2,4 +2,7 @@
 @import './main.css';
 @import './popup-common.css';
 @import './popular.css';
+@import './modal-give-rating.css';
+@import './modal-order-now.css';
+@import './modal-recipe.css';
 @import './hero.css';
