--- a/src/styles/favor-body.css
+++ b/src/styles/favor-body.css
@@ -6,6 +6,19 @@ body {
     transition: 250ms;
 }
 
+p,
+h2 {
+    margin: 0;
+}
+
+ul {
+    margin: 0;
+    padding: 0;
+}
+li {
+    list-style: none;
+}
+
 .favorites-zero {
     display: none;
 }
@@ -63,8 +76,7 @@ body {
     justify-content: center;
     color: rgba(5, 5, 5, 0.2);
     background-color: #ffffff;
-    transition:
-        border-color 250ms cubic-bezier(0.4, 0, 0.2, 1),
+    transition: border-color 250ms cubic-bezier(0.4, 0, 0.2, 1),
         color 250ms cubic-bezier(0.4, 0, 0.2, 1),
         background-color 250ms cubic-bezier(0.4, 0, 0.2, 1),
         box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
@@ -83,8 +95,7 @@ body {
     cursor: pointer;
     color: rgba(5, 5, 5, 0.2);
     background-color: #ffffff;
-    transition:
-        border-color 250ms cubic-bezier(0.4, 0, 0.2, 1),
+    transition: border-color 250ms cubic-bezier(0.4, 0, 0.2, 1),
         color 250ms cubic-bezier(0.4, 0, 0.2, 1),
         background-color 250ms cubic-bezier(0.4, 0, 0.2, 1),
         box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
@@ -123,8 +134,7 @@ body {
     height: 40px;
     border-radius: 50%;
     border-color: rgba(5, 5, 5, 0.3);
-    transition:
-        border-color 250ms cubic-bezier(0.4, 0, 0.2, 1),
+    transition: border-color 250ms cubic-bezier(0.4, 0, 0.2, 1),
         color 250ms cubic-bezier(0.4, 0, 0.2, 1),
         background-color 250ms cubic-bezier(0.4, 0, 0.2, 1),
         box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
@@ -132,10 +142,11 @@ body {
 .page-change-favourite-list {
     display: flex;
     justify-content: center;
+    /* justify-content: center; */
     gap: 4px;
     position: fixed;
     bottom: 5%;
-    left: 50%;
+    /* left: 447px; */
 }
 .btn-num-favourites {
     display: flex;
@@ -156,4 +167,68 @@ body {
 }
 .btn-number-favourite {
     display: flex;
+}
+
+.hero-block {
+    display: none;
+}
+
+/* ================320px============== */
+
+@media screen and (min-width: 320px) {
+    .container {
+        width: 320px;
+    }
+    .page-change-favourite-list {
+        min-width: 335px;
+        min-height: 40px;
+        justify-content: flex-start;
+        /* padding-left: 20px; */
+        bottom: 3%;
+    }
+}
+
+/* ================428px============== */
+
+@media screen and (min-width: 428px) {
+    .container {
+        width: 428px;
+    }
+}
+
+/* ================450px============== */
+
+@media screen and (min-width: 450px) {
+    .container {
+        width: 450px;
+    }
+    .page-change-favourite-list {
+        justify-content: center;
+    }
+}
+
+/* ================768px============== */
+
+@media screen and (min-width: 768px) {
+    .container {
+        width: 768px;
+        margin-left: 32px;
+        margin-right: 32px;
+    }
+    .page-change-favourite-list {
+        justify-content: center;
+        left: 35%;
+    }
+}
+
+/* ================1158px============== */
+@media screen and (min-width: 1158px) {
+    .container {
+        width: 1158px;
+        margin-left: 100px;
+        margin-right: 100px;
+    }
+    .page-change-favourite-list {
+        left: 50%;
+    }
 }
