--- a/src/styles/favor-body.css
+++ b/src/styles/favor-body.css
@@ -1,54 +1,53 @@
 body {
-  font-family: 'Inter', sans-serif;
-  background: var(--primary-bg-color);
-  transition: 250ms;
-  overflow-x: hidden;
-  transition: 250ms;
+    font-family: 'Inter', sans-serif;
+    background: var(--primary-bg-color);
+    transition: 250ms;
+    overflow-x: hidden;
+    transition: 250ms;
 }
 
 .favorites-zero {
-  display: none;
+    display: none;
 }
 
 .favorites-zero.active {
-  width: 375px;
-  display: flex;
-  margin: 0 auto;
-  padding: 256px 20px 0;
+    width: 375px;
+    display: flex;
+    margin: 0 auto;
+    padding: 256px 20px 0;
 }
 
 .container {
-  width: 335px;
-  background: var(--primary-bg-color);
-  transition: 250ms;
+    width: 335px;
+    background: var(--primary-bg-color);
+    transition: 250ms;
 }
 
 .favorites-icon {
-  display: flex;
-  width: 68px;
-  height: 58px;
-  margin-left: auto;
-  margin-right: auto;
+    display: flex;
+    width: 68px;
+    height: 58px;
+    margin-left: auto;
+    margin-right: auto;
 }
 
 .favorites-text {
-  display: flex;
-  text-align: center;
-  width: 335px;
-  margin-top: 24px;
-  font-size: 14px;
-  line-height: 18px;
+    display: flex;
+    text-align: center;
+    width: 335px;
+    margin-top: 24px;
+    font-size: 14px;
+    line-height: 18px;
 }
 
 .category-list-favourites {
-  display: flex;
-  gap: 18px;
-  
+    display: flex;
+    gap: 18px;
 }
 
 .tags-container {
-  display: flex;
-  gap: 18px;
+    display: flex;
+    gap: 18px;
 }
 
 .favorites-tags {
@@ -64,97 +63,97 @@ body {
     justify-content: center;
     color: rgba(5, 5, 5, 0.2);
     background-color: #ffffff;
-    transition: border-color 250ms cubic-bezier(0.4, 0, 0.2, 1),
-      color 250ms cubic-bezier(0.4, 0, 0.2, 1),
-      background-color 250ms cubic-bezier(0.4, 0, 0.2, 1),
-      box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
-  }
+    transition:
+        border-color 250ms cubic-bezier(0.4, 0, 0.2, 1),
+        color 250ms cubic-bezier(0.4, 0, 0.2, 1),
+        background-color 250ms cubic-bezier(0.4, 0, 0.2, 1),
+        box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
 
 .category-btn {
-  font-weight: 500;
-  font-size: 14px;
-  min-width: 91px;
-  height: 46px;
-  border-radius: 15px;
-  border-color: rgba(5, 5, 5, 0.2);
-  display: flex;
-  align-items: center;
+    font-weight: 500;
+    font-size: 14px;
+    min-width: 91px;
+    height: 46px;
+    border-radius: 15px;
+    border-color: rgba(5, 5, 5, 0.2);
+    display: flex;
+    align-items: center;
     justify-content: center;
     cursor: pointer;
     color: rgba(5, 5, 5, 0.2);
     background-color: #ffffff;
-    transition: border-color 250ms cubic-bezier(0.4, 0, 0.2, 1),
+    transition:
+        border-color 250ms cubic-bezier(0.4, 0, 0.2, 1),
         color 250ms cubic-bezier(0.4, 0, 0.2, 1),
         background-color 250ms cubic-bezier(0.4, 0, 0.2, 1),
         box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .favourites-list-btn .category-btn:hover {
-  border: none;
-    color: #F8F8F8;
-    background-color: #9BB537;
+    border: none;
+    color: #f8f8f8;
+    background-color: #9bb537;
 }
 .favorites-tags:hover {
-  border: none;
-    color: #F8F8F8;
-    background-color: #9BB537;
+    border: none;
+    color: #f8f8f8;
+    background-color: #9bb537;
 }
 .favourites-list-btn .category-btn:focus {
-  border: none;
-  color: #F8F8F8;
-  background-color: #9BB537;
+    border: none;
+    color: #f8f8f8;
+    background-color: #9bb537;
 }
 .favorites-tags:focus {
-  border: none;
-  color: #F8F8F8;
-  background-color: #9BB537;
+    border: none;
+    color: #f8f8f8;
+    background-color: #9bb537;
 }
 .page-change-favourite {
 }
 .btn-page-change:hover {
-  background-color: #9BB537;
+    background-color: #9bb537;
 }
 .btn-page-change {
-  font-weight: 600;
-  font-size: 18px;
-  width: 40px;
-  cursor: pointer;
+    font-weight: 600;
+    font-size: 18px;
+    width: 40px;
+    cursor: pointer;
     height: 40px;
     border-radius: 50%;
     border-color: rgba(5, 5, 5, 0.3);
-    transition: border-color 250ms cubic-bezier(0.4, 0, 0.2, 1),
+    transition:
+        border-color 250ms cubic-bezier(0.4, 0, 0.2, 1),
         color 250ms cubic-bezier(0.4, 0, 0.2, 1),
         background-color 250ms cubic-bezier(0.4, 0, 0.2, 1),
         box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
-    
 }
 .page-change-favourite-list {
-  display: flex;
-  justify-content: center;
-  gap: 4px;
-  position: fixed;
+    display: flex;
+    justify-content: center;
+    gap: 4px;
+    position: fixed;
     bottom: 5%;
     left: 50%;
 }
 .btn-num-favourites {
-  display: flex;
-  gap: 8px;
-  margin-left: 10px;
-  margin-right: 10px;
+    display: flex;
+    gap: 8px;
+    margin-left: 10px;
+    margin-right: 10px;
 }
 .green-btn-favourites {
-  background-color: #9BB537;
-  border: none;
+    background-color: #9bb537;
+    border: none;
 }
 .dark-btn-favourites {
-background-color: #050505;
-border: none;
+    background-color: #050505;
+    border: none;
 }
 .dark-btn-favourites:hover {
-  background-color: #050505;
+    background-color: #050505;
 }
 .btn-number-favourite {
-  display: flex;
+    display: flex;
 }
-
-
