--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -17,26 +17,27 @@
     flex-direction: column;
 }
 
-/* Мобілка**************************************************************** */
+/* START********************************************************************************* */
+/* Категорії */
 .all-category-btn {
-    width: 176px;
-    height: 50px;
-    padding: 14px 29px;
-    border-radius: 15px;
-    border: 1px, #050505;
-    background-color: transparent;
-    margin-bottom: 24px;
-    font-size: 18px;
-    font-weight: 500;
-    line-height: 1.21;
+  width: 176px;
+  height: 50px;
+  padding: 14px 29px;
+  border-radius: 15px;
+  border: 1px, #050505;
+  background-color: transparent;
+  margin-bottom: 24px;
+  font-size: 18px;
+  font-weight: 500;
+  line-height: 1.21;
 }
 
-.item-cards {
-    margin-bottom: 18px;
+.categories-box {
+  margin-bottom: 40px;
 }
 
-.card-img {
-    max-width: 335px;
+.category-item-list:not(:last-child) {
+  margin-bottom: 18px;
 }
 
 .category-btn {
@@ -54,39 +55,171 @@
     overflow-y: scroll;
 }
 
-.filter-input {
-    max-width: 335px;
+.filter-item {
+  color: #050505;
+  border: 1px solid #05050533;
+  border-radius: 15px;
+  gap: 40px;
+  padding: 14px 18px;
+  font-family: Inter;
+  font-size: 14px;
+  font-style: normal;
+  font-weight: 500;
+  line-height: normal;
+  display: inline-flex;
 }
 
+/* Фото рецептів */
+.list-item {
+  margin: 0 auto !important;
+}
+
+.item-cards:not(:last-child) {
+  margin-bottom: 18px;
+}
+
+.card-img {
+  max-width: 335px;
+}
+
+/* Фільтри */
 .filters {
-    display: block;
+  display: flex;
+  flex-wrap: wrap;
+}
+
+.filter-area {
+  display: flex;
+  flex-direction: column;
+}
+
+.filter-input {
+  max-width: 335px;
+}
+
+.time {
+  width: 159px;
+}
+
+.area {
+  width: 160px;
+}
+
+.ingrediends {
+  width: 188px;
+}
+
+.ingrediends-box {
+  margin-bottom: 14px;
+}
+
+.label {
+  margin-bottom: 8px;
+  font-family: Inter;
+  font-weight: 500;
+  font-size: 12px;
+  line-height: 1.17;
+}
+
+/* MIN 375**************************************************************** */
+@media screen and (min-width: 375px) {
+  #content {
+    width: 335px;
+  }
+
+  .filter-input {
+    width: 335px;
+  }
+
+  .list-item {
+    margin: 0 auto !important;
+    width: 335px;
+  }
 }
 
 /* MIN 768******************************************************* */
 @media screen and (min-width: 768px) {
-    .cards {
-        display: flex;
-        flex-wrap: wrap;
-        row-gap: 16px;
-        column-gap: 16px;
-    }
 
-    .item-cards {
-        margin-bottom: 0px;
-    }
+  /* Категорії */
+  #content {
+    width: 496px;
+  }
 
-    .card-img {
-        max-width: 240px;
-    }
+  #categories {
+    margin-right: 32px;
+  }
+
+  .all-category-btn {
+    margin-bottom: 30px;
+  }
+
+  .categories-box {
+    margin-bottom: 64px;
+  }
+
+  .category-item-list:not(:last-child) {
+    margin-bottom: 24px;
+  }
+
+  /* Фото рецептів */
+  .list-item {
+    display: flex;
+    flex-wrap: wrap;
+    width: 496px;
+    row-gap: 16px;
+    column-gap: 16px;
+  }
+
+  .item-cards:not(:last-child) {
+    margin-bottom: 0px;
+  }
+
+  .card-img {
+    max-width: 240px;
+  }
+
+  /* Фільтри */
+  .filter-input {
+    width: 278px;
+  }
+
+  .time {
+    width: 125px;
+  }
+
+  .area {
+    width: 141px;
+  }
+}
+
+.filters {
+  gap: 16px;
+}
+
+.label {
+  font-size: 14px;
+  line-height: 1.29;
 }
 
 /* MIN 1280******************************************************/
 @media screen and (min-width: 1280px) {
-    .card-img {
-        max-width: 250px;
-    }
 
-    .cards {
-        row-gap: 32px;
-    }
+  /* Категорії */
+  #content {
+    width: 782px;
+  }
+
+  .all-category-btn {
+    margin-bottom: 42px;
+  }
+
+  /* Фото рецептів */
+  .card-img {
+    max-width: 250px;
+  }
+
+  .list-item {
+    row-gap: 32px;
+    width: 782px;
+  }
 }
