general.css add

--- a/src/styles/hero.css
+++ b/src/styles/hero.css
@@ -1,113 +1,40 @@
-@import './root.css';
-
-/* Указываем box sizing */
-*,
-*::before,
-*::after {
-    box-sizing: border-box;
-}
-
-/* Убираем внутренние отступы */
-ul[class],
-ol[class] {
-    padding: 0;
-}
-
-/* Убираем внешние отступы */
-body,
-h1,
-h2,
-h3,
-h4,
-p,
-ul[class],
-ol[class],
-li,
-figure,
-figcaption,
-blockquote,
-dl,
-dd {
-    margin: 0;
-}
-
-/* Выставляем основные настройки по-умолчанию для body */
-body {
-    min-height: 100vh;
-    scroll-behavior: smooth;
-    text-rendering: optimizeSpeed;
-    line-height: 1.5;
-}
-
-/* Удаляем стандартную стилизацию для всех ul и il, у которых есть атрибут class*/
-ul[class],
-ol[class] {
-    list-style: none;
-}
-
-/* Упрощаем работу с изображениями */
-img {
-    max-width: 100%;
-    display: block;
-}
-a {
-    text-decoration: none;
-}
-
-/* Наследуем шрифты для инпутов и кнопок */
-input,
-button,
-textarea,
-select {
-    font: inherit;
-}
-
-/* Удаляем все анимации и переходы для людей, которые предпочитай их не использовать */
-@media (prefers-reduced-motion: reduce) {
-    * {
-        animation-duration: 0.01ms !important;
-        animation-iteration-count: 1 !important;
-        transition-duration: 0.01ms !important;
-        scroll-behavior: auto !important;
-    }
-}
 .hero-container {
     display: flex;
     flex-wrap: wrap;
     justify-content: center;
-    margin: auto;
     max-width: 335px;
+    margin: auto;
+    padding-bottom: 42px;
 }
 .hero-title {
-    color: #050505;
-    font-family: Inter;
     font-size: 26px;
+    font-family: Inter;
     font-style: normal;
     font-weight: 600;
-    line-height: 120%; /* 31.2px */
+    line-height: 1.31;
     text-transform: uppercase;
     margin-bottom: 14px;
 }
 .hero-span {
-    color: #9bb537;
+    color: var(--primary-brend);
     font-family: Inter;
     font-size: 26px;
     font-style: italic;
     font-weight: 400;
-    line-height: 120%;
+    line-height: 1.31;
     text-transform: uppercase;
 }
 .hero-descr {
-    color: #050505;
+    color: var (--primary-title-color);
     font-family: Inter;
     font-size: 14px;
     font-style: normal;
     font-weight: 400;
-    line-height: 18px; /* 128.571% */
+    line-height: 1.28;
     margin-bottom: 24px;
 }
 .hero-btn {
-    color: #050505;
+    color: var(--primary-title-color);
     font-family: Inter;
     font-size: 14px;
     font-style: normal;
@@ -129,7 +56,6 @@ select {
 .swiper-container {
     display: flex;
     gap: 8px;
-    justify-content: flex-end;
 }
 .images {
     width: 100%;
@@ -137,7 +63,7 @@ select {
 }
 .image {
     height: 280px;
-    background-color: #050505;
+    background-color: var(--primary-title-color);
 }
 .image:not(:last-child) {
     border-radius: 10px;
@@ -157,7 +83,11 @@ select {
     height: 150px;
     margin-bottom: 70px;
     translate: 15% 35%;
-    background: radial-gradient(var(--accent-color) -125%, #050505 75%);
+    background: radial-gradient(
+        circle,
+        rgba(155, 181, 55, 0.5) 0%,
+        rgba(5, 5, 5, 0.3) 75%
+    );
 }
 .dish-zoom {
     overflow: clip;
@@ -201,6 +131,7 @@ select {
 .swiper {
     width: 335px;
     height: 320px;
+    margin-left: auto;
 }
 .swiper-pagination-bullet {
     background-color: gray;
