--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -3,18 +3,18 @@
 
 /* Placing of main */
 .main-div {
-    display: flex;
-    flex-direction: row;
+  display: flex;
+  flex-direction: row;
 }
 
 #side-bar {
-    display: flex;
-    flex-direction: column;
+  display: flex;
+  flex-direction: column;
 }
 
 #content {
-    display: flex;
-    flex-direction: column;
+  display: flex;
+  flex-direction: column;
 }
 
 /* START********************************************************************************* */
@@ -26,10 +26,11 @@
   border-radius: 15px;
   border: 1px, #050505;
   background-color: transparent;
-  margin-bottom: 24px;
+  margin-bottom: 24px !important;
   font-size: 18px;
   font-weight: 500;
   line-height: 1.21;
+  text-wrap: nowrap;
 }
 
 .categories-box {
@@ -41,18 +42,18 @@
 }
 
 .category-btn {
-    background-color: transparent;
-    border-color: transparent;
+  background-color: transparent;
+  border-color: transparent;
 }
 
 .category-list {
-    padding-left: 0px;
+  padding-left: 0px;
 }
 
 .categories-box {
-    max-width: 326px;
-    height: 198px;
-    overflow-y: scroll;
+  max-width: 326px;
+  height: 198px;
+  overflow-y: scroll;
 }
 
 .filter-item {
