--- a/src/styles/general.css
+++ b/src/styles/general.css
@@ -69,25 +69,28 @@ select {
     max-width: 375px;
     padding-right: 20px;
     padding-left: 20px;
-    /* margin-left: auto;
-    margin-right: auto; */
+    display: flex;
+    justify-content: center;
+    margin-left: auto;
+    margin-right: auto;
 }
 
 @media screen and (min-width: 375px) {
     .container {
+        max-width: none;
         min-width: 375px;
     }
 }
 @media screen and (min-width: 768px) {
     .container {
-        width: 768px;
+        min-width: 768px;
         padding-right: 32px;
         padding-left: 32px;
     }
 }
 @media screen and (min-width: 1280px) {
     .container {
-        width: 1280px;
+        min-width: 1280px;
         padding-right: 100px;
         padding-left: 100px;
     }
