--- a/src/styles/hero.css
+++ b/src/styles/hero.css
@@ -1,10 +1,12 @@
 .hero-container {
     display: flex;
-    flex-wrap: wrap;
-    justify-content: center;
-    max-width: 335px;
-    margin: auto;
+    flex-direction: column;
     padding-bottom: 42px;
+    padding-top: 92px;
+}
+.hero-block {
+    margin-right: auto;
+    margin-left: auto;
 }
 .hero-title {
     font-size: 26px;
@@ -131,6 +133,8 @@
 .swiper {
     width: 335px;
     height: 320px;
+}
+.swiper-container {
     margin-left: auto;
 }
 .swiper-pagination-bullet {
@@ -162,9 +166,14 @@
 /* ======================== min-768px ====================== */
 @media screen and (min-width: 768px) {
     .hero-container {
-        max-width: 736px;
+        max-width: none;
         padding-bottom: 80px;
         flex-direction: column;
+        padding-left: 32px;
+    }
+    .hero-block {
+        margin-right: 0;
+        margin-left: 0;
     }
     .hero-text {
         margin-bottom: 32px;
@@ -236,9 +245,10 @@
 /* ======================== min-1200px ====================== */
 @media screen and (min-width: 1200px) {
     .hero-container {
-        max-width: 1280px;
+        padding-left: 100px;
+        max-width: none;
         padding-bottom: 100px;
-        justify-content: flex-start;
+        justify-content: space-between;
         flex-direction: row;
         flex-wrap: nowrap;
         gap: 32px;
