--- a/src/styles/popular.css
+++ b/src/styles/popular.css
@@ -93,8 +93,8 @@ button {
 }
 
 /* ----------STYLES FOR MODAL-BACDROPE POPULAR REEPIES */
-body.no-scroll{
-    overflow: hidden;  
+body.no-scroll {
+    overflow: hidden;
 }
 .js-modal {
     width: 100%;
@@ -105,14 +105,14 @@ body.no-scroll{
     z-index: 100;
     visibility: hidden;
     opacity: 0;
-    transition: all .2s;
+    transition: all 0.2s;
     pointer-events: none;
- }
- .js-modal.is-active{
+}
+.js-modal.is-active {
     opacity: 1;
     visibility: visible;
     pointer-events: all;
- }
+}
 .modal-bg {
     width: 100%;
     height: 100%;
@@ -137,7 +137,7 @@ body.no-scroll{
     right: 16px;
     cursor: pointer;
 }
-.modal-close-btn{
+.modal-close-btn {
     border: none;
     cursor: pointer;
 }
@@ -191,5 +191,3 @@ body.no-scroll{
 }
 .give-rating {
 }
-
-
