--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -77,10 +77,25 @@
 
 .item-cards:not(:last-child) {
     margin-bottom: 18px;
+    position: relative;
 }
 
 .card-img {
+    position: relative;
     max-width: 335px;
+    width: 100%;
+    display: block;
+}
+
+.card-img::after {
+    content: '';
+    position: absolute;
+    top: 0;
+    left: 0;
+    bottom: 0;
+    right: 0;
+    z-index: 5000;
+    background: linear-gradient(to right, rgba(9, 5, 47, .85) 0%, rgba(49, 29, 94, .85) 100%);
 }
 
 /* Фільтри */
@@ -138,9 +153,8 @@
     border-radius: 50%;
     margin-right: 8px;
     font-family: inter;
-    border-color: #0505054d;
-    transition:
-        border-color 250ms cubic-bezier(0.4, 0, 0.2, 1),
+    border-color: #0505054D;
+    transition: border-color 250ms cubic-bezier(0.4, 0, 0.2, 1),
         color 250ms cubic-bezier(0.4, 0, 0.2, 1),
         background-color 250ms cubic-bezier(0.4, 0, 0.2, 1),
         box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
@@ -152,9 +166,9 @@
 }
 
 .main-pag-btn.main-pag-btn-green {
-    border: 1px solid #9bb537;
+    border: 1px solid #9BB537;
     border-radius: 50%;
-    background-color: #9bb537;
+    background-color: #9BB537;
 }
 
 .main-pag-btn:hover:not([disabled]) {
@@ -165,11 +179,10 @@
     width: 44px;
     height: 44px;
     margin-right: 8px;
-    transition:
-        border-color 0.25s cubic-bezier(0.4, 0, 0.2, 1),
-        color 0.25s cubic-bezier(0.4, 0, 0.2, 1),
-        background-color 0.25s cubic-bezier(0.4, 0, 0.2, 1),
-        box-shadow 0.25s cubic-bezier(0.4, 0, 0.2, 1);
+    transition: border-color .25s cubic-bezier(.4, 0, .2, 1),
+        color .25s cubic-bezier(.4, 0, .2, 1),
+        background-color .25s cubic-bezier(.4, 0, .2, 1),
+        box-shadow .25s cubic-bezier(.4, 0, .2, 1);
 }
 
 .main-pag-btn.active:hover {
@@ -179,25 +192,64 @@
     width: 44px;
     height: 44px;
     margin-right: 8px;
-    transition:
-        border-color 0.25s cubic-bezier(0.4, 0, 0.2, 1),
-        color 0.25s cubic-bezier(0.4, 0, 0.2, 1),
-        background-color 0.25s cubic-bezier(0.4, 0, 0.2, 1),
-        box-shadow 0.25s cubic-bezier(0.4, 0, 0.2, 1);
+    transition: border-color .25s cubic-bezier(.4, 0, .2, 1),
+        color .25s cubic-bezier(.4, 0, .2, 1),
+        background-color .25s cubic-bezier(.4, 0, .2, 1),
+        box-shadow .25s cubic-bezier(.4, 0, .2, 1);
 }
 
 .main-pag-btn.active {
     border-radius: 50%;
-    background-color: #9bb537;
+    background-color: #9BB537;
     color: rgb(253, 253, 253);
     width: 44px;
     height: 44px;
     margin-right: 8px;
-    transition:
-        border-color 0.25s cubic-bezier(0.4, 0, 0.2, 1),
-        color 0.25s cubic-bezier(0.4, 0, 0.2, 1),
-        background-color 0.25s cubic-bezier(0.4, 0, 0.2, 1),
-        box-shadow 0.25s cubic-bezier(0.4, 0, 0.2, 1);
+    transition: border-color .25s cubic-bezier(.4, 0, .2, 1),
+        color .25s cubic-bezier(.4, 0, .2, 1),
+        background-color .25s cubic-bezier(.4, 0, .2, 1),
+        box-shadow .25s cubic-bezier(.4, 0, .2, 1);
+}
+
+.add-fav-btn {
+    position: absolute;
+    z-index: 1000;
+    background-color: red;
+    width: 50px;
+    height: 20px;
+    top: 16px;
+    right: 16px;
+}
+
+.span-title {
+    position: absolute;
+    top: 214px;
+    left: 16px;
+    color: #F8F8F8;
+    font-size: 14px;
+    font-weight: 600;
+    line-height: 1.29;
+}
+
+.span-descr {
+    position: absolute;
+    top: 240px;
+    left: 16px;
+    color: #F8F8F8;
+    width: 303px;
+    height: 32px;
+    overflow: hidden;
+    font-size: 12px;
+    font-weight: 400;
+    line-height: 1.33;
+}
+
+.main-see-recipe {
+    position: absolute;
+    right: 16px;
+    top: 288px;
+    width: 89px;
+
 }
 
 /* MIN 375**************************************************************** */
@@ -218,6 +270,7 @@
 
 /* MIN 768******************************************************* */
 @media screen and (min-width: 768px) {
+
     /* Категорії */
     #content {
         width: 496px;
@@ -287,6 +340,7 @@
 
 /* MIN 1280******************************************************/
 @media screen and (min-width: 1280px) {
+
     /* Категорії */
     #content {
         width: 782px;
