--- a/src/styles/header.css
+++ b/src/styles/header.css
@@ -24,6 +24,7 @@
 .is-active-link {
     color: var(--primary-brend);
 }
+
 .header-logo {
     align-self: center;
 }
@@ -78,6 +79,57 @@
 .header-cart:focus {
     fill: var(--primary-brend);
 }
+.headerModal {
+    display: none;
+    position: fixed;
+    top: 0;
+    right: 0;
+
+    z-index: 9999;
+}
+
+.header-modal-content {
+    width: 53vw;
+    height: 100vh;
+    background-color: var(--primary-brend);
+}
+.header-modal-content {
+    display: flex;
+    justify-content: center;
+}
+.header-mobile-nav {
+    display: flex;
+    flex-direction: column;
+    gap: 16px;
+    align-items: center;
+    margin-top: 30vh;
+}
+.header-mobile-link {
+    font-family: Inter;
+    font-size: 12px;
+    font-style: normal;
+    font-weight: 500;
+    line-height: normal;
+    color: #fff;
+}
+
+.header-close {
+    line-height: inherit;
+    position: absolute;
+    top: 10px;
+    right: 20px;
+    font-size: 40px;
+    color: #fff;
+    cursor: pointer;
+}
+.header-switch-mob {
+    position: absolute;
+    bottom: 20px;
+    left: 20px;
+    display: inline-block;
+    width: 46px;
+    height: 20px;
+}
 .header-switch {
     position: relative;
     display: inline-block;
@@ -85,6 +137,9 @@
     height: 20px;
 }
 .header-switch .header-input {
+    display: none;
+}
+.header-switch-mob .header-input-mob {
     display: none;
 }
 .header-slider {
@@ -110,12 +165,15 @@
 .header-input:checked + .header-slider {
     background-color: var(--primary-brend);
 }
-
-.header-input:focus + .header-slider {
-    box-shadow: 0 0 1px var(--primary-brend);
+.header-input-mob:checked + .header-slider {
+    background-color: var(--rating-stars-active);
 }
-
 .header-input:checked + .header-slider:before {
+    -webkit-transform: translateX(26px);
+    -ms-transform: translateX(26px);
+    transform: translateX(26px);
+}
+.header-input-mob:checked + .header-slider:before {
     -webkit-transform: translateX(26px);
     -ms-transform: translateX(26px);
     transform: translateX(26px);
@@ -230,7 +288,7 @@
 }
 
 /* ------------------------- */
-.mobile-menu {
+/* .mobile-menu {
     position: fixed;
     top: 0;
     right: 0;
@@ -243,9 +301,7 @@
     background-color: var(--primary-brend);
     z-index: 11;
     transform: translateX(100%);
-    transition:
-        transform 0.3s ease,
-        opacity 0.3s ease;
+    transition: transform 0.3s ease, opacity 0.3s ease;
     opacity: 0;
 }
 
@@ -397,4 +453,4 @@
     .tablet-desktop-nav-icons {
         margin-top: 32px;
     }
-}
+} */
