--- a/src/styles/favor-body.css
+++ b/src/styles/favor-body.css
@@ -56,6 +56,7 @@ li {
 .category-list-favourites {
     display: flex;
     gap: 18px;
+    display: none;
 }
 
 .tags-container {
@@ -81,6 +82,7 @@ li {
         color 250ms cubic-bezier(0.4, 0, 0.2, 1),
         background-color 250ms cubic-bezier(0.4, 0, 0.2, 1),
         box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
+        display: none;
 }
 
 .category-btn {
@@ -176,6 +178,14 @@ li {
     display: none;
 }
 
+.favorites-text {
+    font: Inter;
+    width: 600px;
+    font-size: 18px;
+    line-height: 20px;
+    letter-spacing: -4%;
+}
+
 /* ================320px============== */
 
 @media screen and (min-width: 320px) {
@@ -233,5 +243,15 @@ li {
     }
     .page-change-favourite-list {
         left: 50%;
+    }
+
+    .mobile-menu {
+        display: none;
+    }
+    .logo-first-color {
+        display: none;
+    }
+    .nav {
+        display: none;
     }
 }
