--- a/src/styles/popular.css
+++ b/src/styles/popular.css
@@ -27,29 +27,35 @@ button {
     text-decoration: none;
     cursor: pointer;
 }
+
 /* ----MAIN STYLES POPULAR RECEPIES */
 .populars {
-    width: 235px;
+    width: 335px;
+    margin-bottom: 40px;
 }
 .popular-recepies-title {
     color: var(--primary-title-color);
     font-family: Inter;
-    font-size: 24px;
+    font-size: 18px;
     font-style: normal;
     font-weight: 600;
-    line-height: 1.16; /* 116.667% */
+    line-height: 1.33;
     text-transform: uppercase;
-    margin-bottom: 32px;
-}
-.main-popular-recepies {
-    width: 235px;
+    margin-top: 40px;
+    margin-bottom: 20px;
 }
 .popular-recepies-item {
     cursor: pointer;
     list-style: none;
 }
+.popular-recepies-item:nth-child(3){
+    display: none;
+}
+.popular-recepies-item:nth-child(4){
+    display: none;
+}
 .popular-recepies-item:not(:last-child) {
-    margin-bottom: 32px;
+    margin-bottom: 24px;
 }
 .thomb-popular-wrap {
     display: flex;
@@ -63,34 +69,101 @@ button {
     overflow: hidden;
 }
 .thomb-popular-info {
-    width: 155px;
+    width: 252px;
 }
 .thomb-popular-title {
     color: var(--primary-title-color);
     font-family: Inter;
-    font-size: 14px;
+    font-size: 18px;
     font-style: normal;
     font-weight: 600;
-    line-height: 1.28; /* 128.571% */
+    line-height: 1.28;
     text-transform: uppercase;
     text-overflow: ellipsis;
     white-space: normal;
-    height: 15px;
+    height: 18px;
     overflow: hidden;
     margin-bottom: 8px;
 }
 .popular-recepie-descr {
-    height: 41px;
+    height: 36px;
     overflow: hidden;
     color: var(--primary-text-color);
     text-overflow: ellipsis;
     white-space: normal;
     font-family: Inter;
-    font-size: 10px;
+    font-size: 12px;
     font-style: normal;
     font-weight: 400;
-    line-height: 1.4; /* 140% */
+    line-height: 1.33;
 }
+/* ------------MOBILE w375---------------- */
+
+/* ------------TALET w768---------------- */
+@media screen and (min-width: 768px) {
+    .populars{
+        width: 176px;
+        margin-bottom: 0;
+    }
+    .popular-recepies-title {
+        margin-top: 64px;
+        margin-bottom: 32px;
+    }
+    .popular-recepies-item:not(:last-child) {
+        margin-bottom: 16px;
+    } 
+    .popular-recepies-item:nth-child(3){
+        display: block;
+    }
+    .popular-recepies-item:nth-child(4){
+        display: block;
+    }
+    .thomb-popular-img {
+        width: 48px;
+        height: 48px;
+        border-radius: 8px;
+        overflow: hidden;
+    }
+    .thomb-popular-info {
+        width: 120px;
+    }
+    .popular-recepie-descr {
+        height: 41px;
+        overflow: hidden;
+        color: var(--primary-text-color);
+        text-overflow: ellipsis;
+        white-space: normal;
+        font-family: Inter;
+        font-size: 10px;
+        font-style: normal;
+        font-weight: 400;
+        line-height: 1.4; /* 140% */
+    }
+}
+
+/* ------------DESCTOP w1280---------------- */
+@media screen and (min-width: 1280px) {
+    .populars{
+        width: 235px;
+    }
+    .popular-recepies-title {
+        font-size: 24px;
+        line-height: 1.16;
+    }
+    .popular-recepies-item:not(:last-child) {
+        margin-bottom: 32px;
+    }
+    .thomb-popular-info {
+        width: 155px;
+    }
+    .thomb-popular-img {
+        width: 64px;
+        height: 64px;
+        border-radius: 8px;
+        overflow: hidden;
+    }
+}
+
 
 /* ----------STYLES FOR MODAL-BACDROPE POPULAR REEPIES */
 body.no-scroll {
@@ -115,26 +188,27 @@ body.no-scroll {
 }
 .modal-bg {
     width: 100%;
-    height: 100%;
+    height: 100vh;
     overflow: auto;
     display: flex;
     padding: 10px;
     background-color: var(--primary-input-title-color);
+    z-index: 100;
 }
 .modal-body {
     position: relative;
-    width: 531px;
+    width: 335px;
     margin: auto;
     border-radius: 15px;
     background-color: var(--dark-title-color);
-    padding: 32px;
+    padding: 40px 20px;
     position: relative;
-    z-index: 20;
+    z-index: 100;
 }
 .modal-close {
     position: absolute;
-    top: 16px;
-    right: 16px;
+    top: 14px;
+    right: 14px;
     cursor: pointer;
 }
 .modal-close-btn {
@@ -144,50 +218,179 @@ body.no-scroll {
 .modal-content {
 }
 .modal-recepi-title {
+    color: var(--primary-title-color);
+    font-family: Inter;
+    font-size: 18px;
+    font-style: normal;
+    font-weight: 600;
+    line-height: 1.33; /* 133.333% */
+    text-transform: uppercase;
     margin-bottom: 16px;
 }
+.recipe-video-content{
+   position: relative;
+}
 .recepi-video-wrap {
+    width: 295px;
+    height: 285px;
+    border-radius: 8px;
+    overflow: hidden;
     margin-bottom: 16px;
+}
+.youtube-btn{
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    border: 2px solid #fff;
+    border-radius: 3px;
+    background-color: transparent;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    width: 32px;
+    height: 23px;
+}
+.youtube-icon{
+    fill: var(--dark-title-color);
 }
 .recepi-tags-wrap {
     display: flex;
-    justify-content: space-between;
+    flex-direction: column;
+    /* justify-content: space-between; */
 }
 .recepi-tags-list {
     display: flex;
+    gap: 8px;
+   
 }
 .recepi-tags-item {
 }
 .recepi-tags-btn {
+    display: block;
+    border: none;
+    background-color: transparent;
+    margin: 0;
+    padding: 8px 16px;
+    border-radius: 35px;
+    border: 1px solid var(--primary-input-border);
+    color: var(--primary-title-color);
+    font-family: Inter;
+    font-size: 12px;
+    font-style: normal;
+    font-weight: 500;
+    line-height: 1.16; /* 116.667% */
 }
 .recepi-rating-wrap {
+    margin-top: 14px;
+    margin-bottom: 33px;
     display: flex;
+    gap: 16px;
 }
-.recepi-rating-value {
+.recepi-rating-value, .recepi-time-cook {
+    color: var(--primary-input-title-color);
+    font-family: Inter;
+    font-size: 14px;
+    font-style: normal;
+    font-weight: 500;
+    line-height: 1.28; 
+}
+.recepi-rating-value{
+    margin-right: 6px;
 }
 .rating-stars-wrap {
 }
 .rating-start-item {
 }
-.recepi-time-cook {
-}
+
 .recepi-ingredients-list {
-    margin-bottom: 32px;
+    margin-bottom: 40px;
 }
 .recepi-ingredients-item {
     display: flex;
     justify-content: space-between;
 }
+.recepi-ingredients-item:not(:last-child) {
+    margin-bottom: 22px;
+}
 .ingredient-name {
+    color: var(--primary-title-color);
+    font-family: Inter;
+    font-size: 14px;
+    font-style: normal;
+    font-weight: 400;
+    line-height: 1.28; /* 128.571% */
 }
 .ingredient-mesure {
+    color: var(--primary-input-title-color);
+    font-family: Inter;
+    font-size: 14px;
+    font-style: normal;
+    font-weight: 400;
+    line-height: 1.28; /* 128.571% */
 }
 .modal-recepi-description {
+    color: var(--primary-text-color);
+    font-family: Inter;
+    font-size: 14px;
+    font-style: normal;
+    font-weight: 400;
+    line-height: 1.28; /* 128.571% */
     margin-bottom: 32px;
+    margin-top: 24px;
 }
 .modal-recepi-buttons {
+    display: flex;
+    gap: 14px;
 }
 .add-favorit {
+    display: block;
+    border: none;
+    padding: 0;
+    margin: 0;
+    background-color: var(--primary-brend);
+    width: 148px;
+    height: 41px;
+    border-radius: 15px;
+    color: var(--primary-bg-color);
+    font-family: Inter;
+    font-size: 14px;
+    font-style: normal;
+    font-weight: 500;
+    line-height: normal;
 }
 .give-rating {
+    display: block;
+    border: none;
+    padding: 0;
+    margin: 0;
+    background-color: transparent;
+    width: 133px;
+    height: 41px;
+    border-radius: 15px;
+    border: 1px solid var(--primary-brend);
+    color: var(--primary-title-color);
+    font-family: Inter;
+    font-size: 14px;
+    font-style: normal;
+    font-weight: 500;
+    line-height: normal;
+}
+
+/* ------------MOBILE w375---------------- */
+
+/* ------------TALET w768---------------- */
+@media screen and (min-width: 768px) {
+    .modal-body {
+        width: 531px;
+    }
+    .modal-recepi-title {
+        margin-bottom: 16px;
+    }
+}
+/* ------------DESCTOP w1280---------------- */
+@media screen and (min-width: 1280px) {
+    .modal-body {
+        width: 531px;
+    }
 }
